# BRD-Review-Semantic-Search-Platform-File-based-No-Database-

./: .gitignore  .gitmodules  API-DOCS.md  Instructions.md  LICENSE  Prompt.txt  README.md  SECURITY.md  docker-compose.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  build.rs
backend/data/: reviews.index  reviews.jsonl  vector_map.jsonl
backend/native/: spfresh_c_api.cc  spfresh_c_api.h
backend/src/: embedder.rs  handlers.rs  main.rs  routes.rs  spfresh.rs  storage.rs  types.rs
frontend/: .dockerignore  Cargo.toml  Dockerfile  Trunk.toml  index.html
frontend/src/: api.rs  main.rs
frontend/src/components/: InsertReview.rs  insert_review.rs  mod.rs  search.rs
