[package]
name = "backend"
version = "0.1.0"
edition = "2018"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hyper = { version = "0.14", features = ["full"] }