[package]
name = "backend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
axum = { version = "0.7.9", features = ["json", "tokio", "http1", "http2"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
anyhow = "1"
thiserror = "1"
fastembed = "4"
parking_lot = "0.12"
once_cell = "1"
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
tower = "0.5"
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["server", "http1", "http2", "tokio"] }
http-body-util = "0.1"


[build-dependencies]
cc = "1.0"

[profile.release]
lto = true
codegen-units = 1
