[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = "0.5"
leptos_router = "0.5"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"