[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
wasm-bindgen = "0.2"
gloo-net = { version = "0.5", features = ["http"] }
console_error_panic_hook = "0.1"
uuid = { version = "1", features = ["v4", "serde", "js"] }